Style: reduce spacing to avoid overlapping with progress bar

--- a/client/src/components/UserForm/styles.scss
+++ b/client/src/components/UserForm/styles.scss
@@ -11,7 +11,7 @@
 }
 
 .form__fields-wrapper {
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .form {
